--- a/style.css
+++ b/style.css
@@ -1,17 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html {
+
+html:not(.fa, .fas) {
     font-size: 10px;
-    font-family:'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body::-webkit-scrollbar {
+    background: rgba(31, 30, 30, 0.24);
+    width: 8px;
+    border-radius: 10px;
+
+}
+
+body::-webkit-scrollbar-thumb {
+    background: crimson;
+    border-radius: 5px;
+    height: 20px;
+    border: 1px solid white;
+}
+
+
+
+html .fa,
+html .fas {
+    font-size: 80px;
+}
+
+html {
     scroll-behavior: smooth;
 }
+
+
 a {
     text-decoration: none;
 }
+
 .container {
     min-height: 100vh;
     width: 100%;
@@ -19,11 +48,13 @@ a {
     align-items: center;
     justify-content: center;
 }
+
 img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 p {
     font-size: 1.4rem;
     margin-top: 5px;
@@ -32,6 +63,7 @@ p {
     letter-spacing: .05rem;
     color: black;
 }
+
 .section-title {
     font-size: 4rem;
     font-weight: 300;
@@ -41,9 +73,11 @@ p {
     letter-spacing: .2rem;
 
 }
+
 .section-title span {
     color: crimson;
 }
+
 .cta {
     display: inline-block;
     padding: 10px 30px;
@@ -57,18 +91,22 @@ p {
     transition: .3s ease;
     transition-property: background-color, color;
 }
+
 .cta:hover {
     background-color: crimson;
     color: white;
 }
+
 .brand h1 {
     font-size: 3rem;
     text-transform: uppercase;
     color: white;
 }
+
 .brand h1 span {
     color: crimson;
 }
+
 /* Header Section*/
 
 #header {
@@ -79,11 +117,13 @@ p {
     width: 100vw;
     height: auto;
 }
+
 #header .header {
     min-height: 8vh;
     background-color: rgba(31, 30, 30, 0.24);
     transition: .9s ease background-color;
 }
+
 #header .nav-bar {
     display: flex;
     align-items: center;
@@ -93,10 +133,11 @@ p {
     max-width: 1300px;
     padding: 0 10px;
 }
+
 #header .nav-list ul {
     list-style: none;
     position: absolute;
-    background-color:rgb(31, 30, 30);
+    background-color: rgb(31, 30, 30);
     width: 100vw;
     height: 100vh;
     /* left: 100%; */
@@ -112,59 +153,62 @@ p {
 }
 
 #header .nav-list ul a {
-font-size: 2.5rem;
-font-weight: 500;
-letter-spacing: .2rem;
-text-decoration: none;
-color: white;
-text-transform: uppercase;
-padding: 20px;
-display: block;
+    font-size: 2.5rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    padding: 20px;
+    display: block;
 }
 
 #header .nav-list ul a::after {
-content: attr(data-after);
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%) scale(0);
-color:rgba(240, 248, 255, 0.021);
-font-size: 13rem;
-letter-spacing: 50px;
-z-index: -1;
-transition: .3s ease letter-spacing;
+    content: attr(data-after);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: rgba(240, 248, 255, 0.021);
+    font-size: 13rem;
+    letter-spacing: 50px;
+    z-index: -1;
+    transition: .3s ease letter-spacing;
 }
 
 #header .nav-list ul li:hover a::after {
     transform: translate(-50%, -50%) scale(1);
     letter-spacing: initial;
 }
+
 #header .nav-list ul li:hover a {
     color: crimson;
 }
+
 #header .hamburger {
-height: 60px;
-width: 60px;
-display: inline-block;
-border: 3px solid white;
-border-radius: 50%;
-position: relative;
-display: flex;
-align-items: center;
-justify-content: center;
-z-index: 100;
-cursor: pointer;
-transform: scale(.8);
-margin-right: -7px;
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+    border: 3px solid white;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    cursor: pointer;
+    transform: scale(.8);
+    margin-right: -7px;
 }
+
 #header .hamburger:after {
-position: absolute;
-content: '';
-height: inherit;
-width: inherit;
-border-radius: inherit;
-border: 1px solid white;
-animation: hamburger_puls 1s infinite;
+    position: absolute;
+    content: '';
+    height: inherit;
+    width: inherit;
+    border-radius: inherit;
+    border: 1px solid white;
+    animation: hamburger_puls 1s infinite;
 }
 
 #header .hamburger .bar {
@@ -174,6 +218,7 @@ animation: hamburger_puls 1s infinite;
     background-color: white;
     z-index: -1
 }
+
 #header .hamburger .bar::after,
 #header .hamburger .bar::before {
     content: '';
@@ -185,19 +230,23 @@ animation: hamburger_puls 1s infinite;
     transition: .3s ease;
     transition-property: top, bottom;
 }
+
 #header .hamburger .bar::after {
     top: 8px;
 }
+
 #header .hamburger .bar::before {
     bottom: 8px;
 }
 
-#header .hamburger.active .bar::after{
+#header .hamburger.active .bar::after {
     top: 0;
 }
+
 #header .hamburger.active .bar::before {
     bottom: 0;
 }
+
 #header .nav-bar .nav-list ul.active {
     left: 0%;
 }
@@ -212,6 +261,7 @@ animation: hamburger_puls 1s infinite;
     position: relative;
     z-index: 2;
 }
+
 #hero::after {
     position: absolute;
     left: 0%;
@@ -223,12 +273,14 @@ animation: hamburger_puls 1s infinite;
     opacity: .7;
     z-index: -1;
 }
+
 .hero {
     max-width: 1200;
     margin: 0 auto;
     padding: 0 50px;
     justify-content: flex-start;
 }
+
 #hero h1 {
     display: block;
     width: fit-content;
@@ -238,12 +290,15 @@ animation: hamburger_puls 1s infinite;
     animation: text_reveal 0.5s ease forwards;
     animation-delay: 1.5s;
 }
+
 #hero h1:nth-child(1) {
     animation-delay: 1s;
 }
+
 #hero h1:nth-child(2) {
     animation-delay: 2s;
 }
+
 #hero h1:nth-child(3) {
     animation: text_reveal_name 0.5s ease forwards;
     animation-delay: 3s;
@@ -259,12 +314,15 @@ animation: hamburger_puls 1s infinite;
     animation: text_reveal_box 1s ease;
     animation-delay: 1s;
 }
+
 #hero h1:nth-child(1) span {
     animation-delay: .5s;
 }
+
 #hero h1:nth-child(2) span {
     animation-delay: 1.5s;
 }
+
 #hero h1:nth-child(3) span {
     animation-delay: 2.5s;
 }
@@ -274,7 +332,7 @@ animation: hamburger_puls 1s infinite;
 /* End Hero section */
 
 /* Services Section */
-#services .services{
+#services .services {
     flex-direction: column;
     text-align: center;
     max-width: 1500px;
@@ -282,13 +340,13 @@ animation: hamburger_puls 1s infinite;
     padding: 100px 0;
 }
 
-#services .service-top p {
+#services .service-top p {}
 
-}
 #services .service-bottom p {
     color: white;
     text-align: left;
 }
+
 #services .service-bottom {
     display: flex;
     align-items: center;
@@ -296,11 +354,12 @@ animation: hamburger_puls 1s infinite;
     flex-wrap: wrap;
     margin-top: 50px;
 }
+
 #services .service-item {
     flex-basis: 80%;
     display: flex;
     align-items: flex-start;
-    justify-content:center;
+    justify-content: center;
     flex-direction: column;
     padding: 30px;
     border-radius: 10px;
@@ -326,9 +385,14 @@ animation: hamburger_puls 1s infinite;
 }
 
 #services .service-bottom .icon {
-    height:80px;
-    width: 80px;
+    height: 80px;
+    width: 100%;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: crimson;
+    font-size: 8rem;
 }
 
 #services .service-item h2 {
@@ -337,6 +401,7 @@ animation: hamburger_puls 1s infinite;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
+
 /* #services .service-item p {
     color: white;
     text-align: left;
@@ -353,18 +418,21 @@ animation: hamburger_puls 1s infinite;
     margin: auto;
     padding: 100px 0;
 }
+
 #projects .projects-header h1 {
-margin-bottom: 50px;
+    margin-bottom: 50px;
 }
+
 #projects .all-projects {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
 #projects .project-item {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 80%;
@@ -372,6 +440,7 @@ margin-bottom: 50px;
     overflow: hidden;
     border-radius: 10px;
 }
+
 #projects .project-info {
     padding: 30px;
     flex-basis: 50%;
@@ -384,87 +453,101 @@ margin-bottom: 50px;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     color: white;
 }
+
 #projects .project-info h1 {
-font-size: 4rem;
-font-weight: 500;
+    font-size: 4rem;
+    font-weight: 500;
 }
+
 #projects .project-info h2 {
     font-size: 1.8rem;
     font-weight: 500;
     margin-top: 10px;
 }
+
 #projects .project-info p {
     color: white;
 }
+
 #projects .project-img {
     flex-basis: 50%;
     height: 300px;
     overflow: hidden;
     position: relative;
 }
+
 #projects .project-img::after {
-content: '';
-position: absolute;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-opacity: .7;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    opacity: .7;
 }
+
 #projects .project-img img {
     transition: .3s ease transform;
 }
+
 #projects .project-item:hover .project-img img {
-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 /* End Projects Section */
 
 /* About Section */
 #about .about {
-    flex-direction:column-reverse;
+    flex-direction: column-reverse;
     max-width: 1200px;
     margin: 0 auto;
     padding: 100px 20px;
 }
+
 #about .col-left {
     width: 250px;
     height: 360px;
 }
+
 #about .col-right {
     width: 100%;
     text-align: center;
 }
+
 #about .col-right h2 {
     font-size: 1.5rem;
     font-weight: 500;
     letter-spacing: .2rem;
     margin-bottom: 10px;
 }
+
 #about .col-right p {
-margin-bottom:20px;
+    margin-bottom: 20px;
 }
+
 #about .cta {
     color: black;
     margin-bottom: 50px;
     padding: 10px 20px;
 }
+
 #about .col-left .about-img {
     height: 100%;
     width: 100%;
     position: relative;
     border: 10px solid white
 }
+
 #about .col-left .about-img::after {
-content: '';
-position: absolute;
-left: -33px;
-top: 19px;
-height: 98%;
-width: 98%;
-border: 7px solid crimson;
-z-index: -1;
+    content: '';
+    position: absolute;
+    left: -33px;
+    top: 19px;
+    height: 98%;
+    width: 98%;
+    border: 7px solid crimson;
+    z-index: -1;
 
 }
 
@@ -476,37 +559,44 @@ z-index: -1;
     max-width: 1200px;
     margin: 0 auto;
 }
+
 #contact .contact-items {
     width: 400px;
 }
+
 #contact .contact-item {
-width: 80%;
-padding: 20px;
-text-align: center;
-border-radius: 10px;
-padding: 30px;
-margin: 30px;
-display: flex;
-justify-content: center;
-align-items: center;
-box-shadow: 0px 0px 5px 0px #0000002c;
-flex-direction: column;
-transition: .3 ease box-shadow;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0px #0000002c;
+    flex-direction: column;
+    transition: .3 ease box-shadow;
 }
+
 #contact .contact-item:hover {
     box-shadow: 0px 0px 18px 5px #0000002c;
-} 
+}
 
 #contact .icon {
     width: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
+    color: rgba(31, 30, 30, 0.85);
+    font-size: 8rem;
 }
+
 #contact .contact-info h1 {
     font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 5px;
 }
+
 #contact .contact-info h2 {
     font-size: 1.3rem;
     line-height: 2rem;
@@ -519,12 +609,14 @@ transition: .3 ease box-shadow;
 #footer {
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
+
 #footer .footer {
     min-height: 200px;
     flex-direction: column;
     padding-top: 50px;
     padding-bottom: 10px;
 }
+
 .footer h2 {
     color: white;
     font-weight: 500;
@@ -536,36 +628,44 @@ transition: .3 ease box-shadow;
     justify-content: center;
     display: flex;
 }
+
 #footer .social-icon {
     display: flex;
     margin-bottom: 30px;
 }
+
 #footer .social-item {
     height: 50px;
     width: 50px;
     margin: 0 5px;
 }
+
 #footer .social-item img {
     filter: grayscale(1);
     transition: .3s ease filter;
 }
+
 #footer .social-item img:hover {
     filter: grayscale(0);
 }
+
 #footer p {
     color: white;
     font-size: 1.3rem;
 }
+
 /* End Footer Section */
 /* Keyframes */
 @keyframes text_reveal_box {
+
     /* 0% {
         left: 50%;
     } */
     50% {
-        width:100%;
+        width: 100%;
         left: 0%;
     }
+
     100% {
         width: 0;
         left: 100%;
@@ -577,12 +677,14 @@ transition: .3 ease box-shadow;
         color: white;
     }
 }
+
 @keyframes text_reveal_name {
     100% {
         color: crimson;
         font-weight: 500;
     }
 }
+
 /* End Keyframes */
 
 /* hamburger_puls */
@@ -591,33 +693,39 @@ transition: .3 ease box-shadow;
         opacity: 1;
         transform: scale(1);
     }
+
     100% {
         opacity: 0;
         transform: scale(1.3);
     }
 }
+
 /* hamburger_puls */
 
 /* Media Query For Tablet */
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
     .cta {
         font-size: 2.5rem;
         padding: 20px 60px;
     }
+
     h1.section-title {
         font-size: 5rem;
     }
+
     /* Hero */
     #hero h1 {
         font-size: 5rem;
     }
+
     /* End Hero */
     /* Service */
     #services .service-bottom .service-item {
         flex-basis: 45%;
         margin: 2.5%;
     }
-        /* #services .service-item {
+
+    /* #services .service-item {
         height: 100%;
         margin: 0;
     }  */
@@ -626,108 +734,135 @@ transition: .3 ease box-shadow;
     /* End Service */
 
     /* Project */
-#projects .project-item {
-    flex-direction: row;
-}
-#projects .project-item:nth-child(even) {
-    flex-direction: row-reverse;
-}
-#projects .project-item {
-height: 400px;
-margin: 0;
-width: 100%;
-border-radius: 0;
-} 
-#projects .all-projects .project-info {
-    height: 100%;
-}
-#projects .all-projects .project-img {
-    height: 100%;
-}
+    #projects .project-item {
+        flex-direction: row;
+    }
+
+    #projects .project-item:nth-child(even) {
+        flex-direction: row-reverse;
+    }
+
+    #projects .project-item {
+        height: 400px;
+        margin: 0;
+        width: 100%;
+        border-radius: 0;
+    }
+
+    #projects .all-projects .project-info {
+        height: 100%;
+    }
+
+    #projects .all-projects .project-img {
+        height: 100%;
+    }
+
     /* End Project */
     /* About */
-#about .about {
-    flex-direction: row;
-}
-#about .col-left {
-    width: 600px;
-    height: 400px;
-    padding-left: 60px;
-}
-#about .about .col-left .about-img::after {
-    left: -45px;
-    top: 34px;
-    height: 98%;
-    width: 98%;
-    border: 10px solid crimson;
-}
-#about .col-right {
-text-align: left;
-padding: 30px;
-}
-#about .col-right h1{
-    text-align: left;
-}
+    #about .about {
+        flex-direction: row;
+    }
+
+    #about .col-left {
+        width: 600px;
+        height: 400px;
+        padding-left: 60px;
+    }
+
+    #about .about .col-left .about-img::after {
+        left: -45px;
+        top: 34px;
+        height: 98%;
+        width: 98%;
+        border: 10px solid crimson;
+    }
+
+    #about .col-right {
+        text-align: left;
+        padding: 30px;
+    }
+
+    #about .col-right h1 {
+        text-align: left;
+    }
+
     /* End About */
 
     /* Contact */
-#contact .contact {
-flex-direction: column;
-padding: 100px 0;
-align-items: center;
-justify-content: center;
-min-height: 20vh;
-}
-#contact .contact-items {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-#contact .contact-item {
-width: 250px;
-flex-basis: 30%;
-margin: 1.5%;
-/* margin: 20px; */
-flex-direction: row;
-}
-#contact .contact-item .icon{
-height: 100px;
-width: 100px;
-}
-#contact .contact-item .icon img{
-object-fit: contain;
-}
-#contact .contact-item .icon .contact-info{
-width: 100%;
-text-align: left;
-padding-left: 20px;
-}
-#contact .contact-items {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    margin: 0;
+    #contact .contact {
+        flex-direction: column;
+        padding: 100px 0;
+        align-items: center;
+        justify-content: center;
+        min-height: 20vh;
+    }
 
-}
-#contact .contact-items .contact-item {
-    width: 30%;
-    /* background-color: yellow; */
+    #contact .contact-items {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 
-}
+    #contact .contact-item {
+        width: 250px;
+        flex-basis: 30%;
+        margin: 1.5%;
+        /* margin: 20px; */
+        flex-direction: row;
+    }
+
+    #contact .contact-item .icon {
+        height: 100px;
+        width: 100px;
+    }
+
+    #contact .contact-item .icon img {
+        object-fit: contain;
+    }
+
+    #contact .contact-item .icon .contact-info {
+        width: 100%;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+    #contact .contact-items {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: nowrap;
+        margin: 0;
+
+    }
+
+    #contact .contact-items .contact-item {
+        width: 30%;
+    }
+    #contact .icon {
+        width: 70px;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        color: rgba(31, 30, 30, 0.85);
+        font-size: 7rem;
+        padding-right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
     /* End Contact */
 }
+
 /* End Media Query For Tablet */
 
 /* Media Query For Desktop */
 @media only screen and (min-width: 1200px) {
-    
+
     #header .hamburger {
         display: none;
     }
-    
+
     #header .nav-list ul {
         position: initial;
         background-color: transparent;
@@ -735,29 +870,35 @@ padding-left: 20px;
         display: block;
         width: fit-content;
     }
-    
-    #header .nav-list ul li{
-display: inline-block;
+
+    #header .nav-list ul li {
+        display: inline-block;
     }
-    #header .nav-list ul li a{
-font-size: 1rem;
+
+    #header .nav-list ul li a {
+        font-size: 1.5rem;
     }
-    #header .nav-list ul li a::after{
+
+    #header .nav-list ul li a::after {
         display: none;
     }
-    html {
+
+    html  {
         font-size: 12.5px;
         /* font-size: 17.5px; */
     }
+
     h1.section-title {
         font-size: 4rem;
     }
+
     /* Hero */
     #hero h1 {
         font-size: 4rem;
     }
+
     .cta {
-    font-size: 2rem;
+        font-size: 2rem;
     }
 
 
@@ -767,17 +908,36 @@ font-size: 1rem;
     }
 
     #services .services .service-bottom .service-item {
-flex-basis: 22%;
-margin: 1.5%;    
-}
-   /* End Services */
-/* Projects */
-#projects .projects .all-projects {
-    margin: 0 5%;
-}
+        flex-basis: 22%;
+        margin: 1.5%;
+    }
+
+    /* End Services */
+    /* Projects */
+    #projects .projects .all-projects {
+        margin: 0 5%;
+    }
 
 
-/* End Projects */
+    /* End Projects */
 
 }
+
 /* End Media Query For Desktop */
+
+
+/* extra */
+#faIcon1,
+#faIcon2,
+#faIcon3,
+#faIcon4 {
+align-items: center;
+justify-content: center;
+color: crimson;
+font-size: 50px;
+}
+
+
+
+
+/* end extra */
