--- a/style.css
+++ b/style.css
@@ -106,6 +106,15 @@ p {
 .brand h1 span {
     color: crimson;
 }
+.brand h6 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: white;
+}
+
+.brand h6 span {
+    color: crimson;
+}
 
 /* Header Section*/
 
@@ -281,7 +290,7 @@ p {
     justify-content: flex-start;
 }
 
-#hero h1 {
+#hero h6 {
     display: block;
     width: fit-content;
     font-size: 4rem;
@@ -291,20 +300,20 @@ p {
     animation-delay: 1.5s;
 }
 
-#hero h1:nth-child(1) {
+#hero h6:nth-child(1) {
     animation-delay: 1s;
 }
 
-#hero h1:nth-child(2) {
+#hero h6:nth-child(2) {
     animation-delay: 2s;
 }
 
-#hero h1:nth-child(3) {
+#hero h6:nth-child(3) {
     animation: text_reveal_name 0.5s ease forwards;
     animation-delay: 3s;
 }
 
-#hero h1 span {
+#hero h6 span {
     position: absolute;
     left: 0;
     top: 0;
@@ -315,15 +324,15 @@ p {
     animation-delay: 1s;
 }
 
-#hero h1:nth-child(1) span {
+#hero h6:nth-child(1) span {
     animation-delay: .5s;
 }
 
-#hero h1:nth-child(2) span {
+#hero h6:nth-child(2) span {
     animation-delay: 1.5s;
 }
 
-#hero h1:nth-child(3) span {
+#hero h6:nth-child(3) span {
     animation-delay: 2.5s;
 }
 
@@ -419,7 +428,7 @@ p {
     padding: 100px 0;
 }
 
-#projects .projects-header h1 {
+#projects .projects-header h6 {
     margin-bottom: 50px;
 }
 
@@ -454,7 +463,7 @@ p {
     color: white;
 }
 
-#projects .project-info h1 {
+#projects .project-info h6 {
     font-size: 4rem;
     font-weight: 500;
 }
@@ -591,7 +600,7 @@ p {
     font-size: 8rem;
 }
 
-#contact .contact-info h1 {
+#contact .contact-info h6 {
     font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 5px;
@@ -709,12 +718,12 @@ p {
         padding: 20px 60px;
     }
 
-    h1.section-title {
+    h6.section-title {
         font-size: 5rem;
     }
 
     /* Hero */
-    #hero h1 {
+    #hero h6 {
         font-size: 5rem;
     }
 
@@ -782,7 +791,7 @@ p {
         padding: 30px;
     }
 
-    #about .col-right h1 {
+    #about .col-right h6 {
         text-align: left;
     }
 
@@ -888,12 +897,12 @@ p {
         /* font-size: 17.5px; */
     }
 
-    h1.section-title {
+    h6.section-title {
         font-size: 4rem;
     }
 
     /* Hero */
-    #hero h1 {
+    #hero h6 {
         font-size: 4rem;
     }
 
