--- a/galleryKakaJere/gallery_paliheca/css/style.css
+++ b/galleryKakaJere/gallery_paliheca/css/style.css
@@ -288,7 +288,8 @@ header {
 }
 
 .course__image {
-    height: 40%;
+    /* height: 40%; */
+    height: 13.5rem;
     object-fit: cover !important;
     overflow: hidden;
     /* background-color: red; */
